Expounded on the app for practice

--- a/PokemonReviewApp/appsettings.json
+++ b/PokemonReviewApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DrWilson\\SQLEXPRESS;Initial Catalog=pokemonreview;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
